usbredir-0.3.1 unreleased
-------------------------
-usbredirparser:
 -add a usbredirparser_fl_write_cb_owns_buffer flag
  See the comment in usbredirparser.h above usbredirparser_write for details.
 -add a usbredirparser_free_packet_data function for symetry with
  usbredirparser_free_write_buffer

-usbredirhost:
 -Fix device resets
 -Add a flags parameter to usbredirhost_open, this accepts the following flags:
  usbredirhost_fl_write_cb_owns_buffer
 -The flags parameter causes an ABI breakage, new soname: libusbredirhost.so.1

-usbredirserver:
 -Fix -v flag


ubsredir-0.3 14 July 2011
-------------------------
-Initial release, start at version 0.3 to match the version of
 the protocol desciption doc usb-redirection-protocol.txt