@@ -5,12 +5,14 @@ usbredir-0.3.1 unreleased
   See the comment in usbredirparser.h above usbredirparser_write for details.
  -add a usbredirparser_free_packet_data function for symetry with
   usbredirparser_free_write_buffer
+ -limited multi-thread safeness, see README.multi-thread
 
 -usbredirhost:
  -Fix device resets
  -Add a flags parameter to usbredirhost_open, this accepts the following flags:
   usbredirhost_fl_write_cb_owns_buffer
  -The flags parameter causes an ABI breakage, new soname: libusbredirhost.so.1
+ -limited multi-thread safeness, see README.multi-thread
 
 -usbredirserver:
  -Fix -v flag
